//
// Copyright 2021 BigDL Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
syntax = 'proto3';


//option java_multiple_files = true;
option java_package = "com.intel.analytics.bigdl.ppml.fl.generated";
option java_outer_classname = "FlBaseProto";

enum SIGNAL {
    SUCCESS = 0;
    WAIT = 1;
    TIMEOUT = 2;
    EMPTY_INPUT = 3;
    ERROR = 4;
}

message FloatTensor {
    repeated int32 shape = 1;
    repeated float tensor = 2;
    string dtype = 3;
}
//
message TensorMap {
    MetaData metaData = 1;
    map<string, FloatTensor> tensorMap = 2;
}
//
message MetaData {
    string name = 1;
    int32 version = 2;
}
